2001-11-18  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh.{c,h} (add_kst_item):
	(ewmh_AddToKdeSysTray):
	(EWMH_IsKdeSysTrayWindow):
	(EWMH_ManageKdeSysTray):
	(EWMH_WindowInit):
	fvwm/ewmh_intern.h:
	* fvwm/events.c (HandleDestroyNotify):
	(HandleMapRequest):
	(HandleUnmapNotify):
	Fixed the KDE system tray implementation

2001-11-16  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh.h:
	* fvwm/ewmh.c:
	fixed EWMH_WindowDestroyed and EWMH_DestroyWindow macros
	
2001-11-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh.{c,h} (EWMH_DestroyWindow):
	(EWMH_WindowDestroyed):
	* fvwm/events.c (HandleReparentNotify):
	(HandleDestroyNotify):
	(HandleUnmapNotify):
	* fvwm/add_window.c (destroy_window):
	Fixed the ewmh windows lists

2001-11-15  olicha  <olivier.chapuis@free.fr>

	* fvwm/Makefile.am:
	* fvwm/ewmh.{c,h}:
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_events.c:
	* fvwm/ewmh_icons.c:
	* fvwm/ewmh_names.c:
	* fvwm/fvwm2.1:
	* NEWS:
	New files to achieve the extended WM hints support, off by
	default. This code is ifdefed a la gnome.c.
	This is work in progess (need to do so that every things are
	configurable).

	* configure.in:
	* acconfig.h (HAVE_EWMH, HAVE_ICONV, USE_LIBICONV, HAVE_CODSET):
	New configure option --enable-ewmh. Added tests for iconv and
	nl_langinfo for UTF8 conversions.

	* fvwm/add_window.c (AddWindow):
	(CaptureOneWindow):
	(destroy_window):
	(setup_window_name):
	(setup_icon):
	EWMH_SetWMState, EWMH_SetWMDesktop, EWMH_SetFrameStrut,
	EWMH_WindowDestroyed, EWMH_WMName, EWMH_SetVisibleName,
	SET_HAS_EWMH_ICON, EWMH_WMIconName

	* fvwm/add_window.c (setup_window_structure):
	* fvwm/fvwm.h (FvwmWindow):
	(window_flags):
	* fvwm/window_flags.h:
	* fvwm/session.c (get_version_string):
	(SaveWindowStates):
	(LoadWindowStates):
	Added some entries in FvwmWindow and some flags (more will be
	added). Some of these states need to be saved at restart and
	at recapture. This code is ifdefed, may be it should not: I was